@@ -88,7 +88,7 @@ int main(int argc, char **argv)
     info(0, "step 1: generic functions");
 
     /* compile */
-    if ((regexp = gw_regex_comp(re, REG_EXTENDED|REG_ICASE)) == NULL)
+    if ((regexp = gw_regex_comp(re, REG_EXTENDED)) == NULL)
         panic(0, "regex compilation failed!");
 
     debug("regex",0,"RE: regex <%s> has %ld subexpressions.",
@@ -105,8 +105,17 @@ int main(int argc, char **argv)
               octstr_get_cstr(re), octstr_get_cstr(err));
         octstr_destroy(err);
     } else {
+        int i;
         char *rsub;
         debug("regex",0,"RE: regex <%s> matches.", octstr_get_cstr(re));
+        debug("regex",0,"RE: substring matches are:");
+        for (i = 0; i <= REGEX_MAX_SUB_MATCH; i++) {
+            if (pmatch[i].rm_so != -1 && pmatch[i].rm_eo != -1) {
+                Octstr *s = octstr_copy(os, pmatch[i].rm_so, pmatch[i].rm_eo - pmatch[i].rm_so);
+                debug("regex",0,"RE:  %d: <%s>", i, octstr_get_cstr(s));
+                octstr_destroy(s);
+            }
+        }
         rsub = gw_regex_sub(octstr_get_cstr(sub), octstr_get_cstr(os),
                             REGEX_MAX_SUB_MATCH, &pmatch[0]);
         debug("regex",0,"RE: substituted string is <%s>.", rsub);
